--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -45,6 +45,10 @@
 		"@opentelemetry/semantic-conventions": "1.12.0",
 		"@prisma/client": "4.13.0",
 		"@prisma/instrumentation": "4.13.0",
+		"@vercel/kv": "0.1.1",
+		"@vercel/postgres-kysely": "0.1.3",
+		"kysely": "0.24.2",
+		"prisma-kysely": "1.2.1",
 		"superjson": "1.12.3",
 		"tslog": "4.8.2",
 		"ulid": "2.3.0",
