--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,6 +30,7 @@
 		"localized-address-format": "1.3.1",
 		"nextjs-routes": "1.0.9",
 		"probe-image-size": "7.2.3",
+		"react-phone-number-input": "3.2.21",
 		"react-string-replace": "1.1.0"
 	},
 	"devDependencies": {
