--- a/packages/api/turbo.json
+++ b/packages/api/turbo.json
@@ -1,12 +1,5 @@
 {
 	"$schema": "https://turbo.build/schema.json",
 	"extends": ["//"],
-	"pipeline": {
-		"generate:data": {
-			"cache": false,
-			"dependsOn": ["^db:dataMigrate"],
-			"env": ["DATABASE_URL", "DB_DIRECT_URL"],
-			"outputs": ["./generated/**"]
-		}
-	}
+	"pipeline": {}
 }
