--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -84,6 +84,7 @@
 		"@tanstack/react-query": "4.29.5",
 		"@tanstack/react-query-devtools": "4.29.6",
 		"@tanstack/react-table": "8.9.1",
+		"@tanstack/react-table-devtools": "8.7.6",
 		"@tiptap/extension-link": "2.0.3",
 		"@tiptap/react": "2.0.3",
 		"@tiptap/starter-kit": "2.0.3",
