--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,8 +9,8 @@
 		"build:icons": "tsx ./icon/buildIcons.ts",
 		"chromatic": "chromatic",
 		"clean:node": "rm -rf ./node_modules/ || true",
-		"dev": "SKIP_DOCS=1  pnpm with-env storybook dev -p 6006 --no-open",
-		"dev:fast": "SKIP_DOCS=1 storybook dev -p 6006 --no-open",
+		"dev": "pnpm with-env storybook dev -p 6006 --no-open",
+		"dev:fast": "pnpm dev",
 		"format": "prettier --write --cache --cache-strategy metadata .",
 		"preinstall": "npx only-allow pnpm",
 		"lint": "eslint --cache .",
