--- a/packages/ui/tsconfig.storybook.json
+++ b/packages/ui/tsconfig.storybook.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@weareinreach/config/tsconfig/base.json",
+	"extends": "./tsconfig.json",
 	"compilerOptions": {
 		"baseUrl": ".",
 		"esModuleInterop": false,
