--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,6 +14,8 @@
 		"with-env": "dotenv -e ../../.env --"
 	},
 	"dependencies": {
+		"@crowdin/crowdin-api-client": "1.22.1",
+		"@crowdin/ota-client": "1.0.0",
 		"@googlemaps/google-maps-services-js": "3.3.30",
 		"@tanstack/react-query": "4.29.5",
 		"@terraformer/wkt": "2.2.0",
