--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -27,6 +27,7 @@
 		"@weareinreach/db": "0.100.0",
 		"alex": "11.0.0",
 		"geolib": "3.3.3",
+		"just-compact": "3.2.0",
 		"just-diff": "6.0.2",
 		"just-diff-apply": "5.5.0",
 		"just-flush": "2.3.0",
