--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,6 +27,7 @@
 		"geolib": "3.3.3",
 		"json-schema-to-zod": "0.6.3",
 		"just-compare": "2.3.0",
+		"just-map-values": "3.2.0",
 		"libphonenumber-js": "1.10.30",
 		"localized-address-format": "1.3.1",
 		"nextjs-routes": "1.0.9",
