--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"extends": "@weareinreach/config/tsconfig/base.json",
 	"compilerOptions": {
-		"baseUrl": "."
+		"baseUrl": ".",
+		"strict": true
 	},
 	"include": [
 		"./next-env.d.ts",
