--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"extends": "@weareinreach/config/tsconfig/base.json",
 	"compilerOptions": {
-		"baseUrl": "./"
+		"baseUrl": "./",
+		"strict": true
 	},
 	"exclude": ["**/node_modules", "./**/.*/"],
 	"include": ["./**/*.ts", "./**/*.js", "../../@types/**/*.ts"]
