--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -2,9 +2,9 @@
 	"extends": "@weareinreach/config/tsconfig/base.json",
 	"compilerOptions": {
 		"noImplicitAny": false,
-		"strictNullChecks": true,
 		"baseUrl": "./",
-		"allowJs": true
+		"allowJs": true,
+		"strict": true
 	},
 	"exclude": ["**/node_modules", "./**/.*/"],
 	"include": ["./**/*.ts", "./**/*.js", "./**/*.mjs", "../../@types/**/*.ts"]
