--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -8,7 +8,8 @@
 			"~app/*": ["../../apps/app/src/*"],
 			"~auth/*": ["../../packages/auth/*"],
 			"~db/*": ["../../packages/db/*"]
-		}
+		},
+		"strict": true
 	},
 	"include": [
 		"./**/*.ts",
