--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -66,6 +66,7 @@
 		"axios": "1.4.0",
 		"dayjs": "1.11.7",
 		"deepmerge": "4.3.1",
+		"duration-fns": "3.0.2",
 		"embla-carousel-autoplay": "7.1.0",
 		"embla-carousel-react": "7.1.0",
 		"i18next": "22.4.15",
@@ -76,6 +77,7 @@
 		"i18next-localstorage-backend": "4.1.1",
 		"i18next-multiload-backend-adapter": "2.2.0",
 		"ioredis": "5.3.2",
+		"just-compact": "3.2.0",
 		"luxon": "3.3.0",
 		"next": "13.4.2",
 		"next-auth": "4.22.1",
@@ -91,8 +93,8 @@
 		"@playwright/test": "1.33.0",
 		"@prisma/nextjs-monorepo-workaround-plugin": "4.14.0",
 		"@tanstack/react-query-devtools": "4.29.7",
+		"@tanstack/react-table-devtools": "8.7.6",
 		"@total-typescript/ts-reset": "0.4.2",
-		"@types/deepmerge": "2.2.0",
 		"@types/eslint": "8.37.0",
 		"@types/flat": "5.0.2",
 		"@types/luxon": "3.3.0",
