data migrate: update published/deleted

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -100,6 +100,7 @@
 		"luxon": "3.3.0",
 		"mongoback": "3.0.6",
 		"prettier": "2.8.8",
+		"pretty-bytes": "6.1.0",
 		"prisma": "4.14.1",
 		"prisma-dbml-generator": "0.10.0",
 		"prisma-query-inspector": "1.4.4",
