--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -93,6 +93,7 @@
 		"iso-3166-2": "1.0.0",
 		"iso-google-locales": "3.0.4",
 		"just-capitalize": "3.2.0",
+		"just-compact": "3.2.0",
 		"just-flush": "2.3.0",
 		"langs": "2.0.0",
 		"libphonenumber-js": "1.10.30",
