--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -30,7 +30,7 @@
 		"format:all": "pnpm format:export && pnpm format:generated",
 		"format:export": "prettier --cache --cache-strategy metadata --write ./data-transfer/**/*.{ts,json}",
 		"format:generated": "prettier --cache --cache-strategy metadata --write ./zod*/*",
-		"generate:data": "pnpm with-env tsx ./lib/generators/index.ts",
+		"generate:data": "pnpm with-env tsx ./lib/generateData.ts",
 		"inspect-queries": "prisma-query-inspector start",
 		"preinstall": "npx only-allow pnpm",
 		"lint": "eslint --cache .",
