--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 			"@npmcli/move-file": "npm:@npmcli/fs@^2.0.0",
 			"axe-core": "^4.7.0",
 			"chokidar": ">=3.0.0",
+			"csstype": "^3.1.2",
 			"eslint-plugin-import": "npm:eslint-plugin-i",
 			"eslint-plugin-turbo@0.0.9": "0.0.8",
 			"glob-parent@<5.1.2": ">=5.1.2",
