--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,6 +30,7 @@
 		"json-schema-to-zod": "0.6.3",
 		"just-compact": "3.2.0",
 		"just-compare": "2.3.0",
+		"just-filter-object": "3.2.0",
 		"just-map-values": "3.2.0",
 		"libphonenumber-js": "1.10.30",
 		"localized-address-format": "1.3.1",
