--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -34,6 +34,7 @@
 		"just-flush": "2.3.0",
 		"just-group-by": "2.2.0",
 		"just-intersect": "4.3.0",
+		"just-map-values": "3.2.0",
 		"just-omit": "2.2.0",
 		"just-pick": "4.2.0",
 		"just-remove": "3.2.0",
