--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -58,6 +58,7 @@
 		"just-capitalize": "3.2.0",
 		"listr2": "6.6.0",
 		"next": "13.4.3",
+		"p-queue": "7.3.4",
 		"prettier": "2.8.8",
 		"prisma": "4.14.1",
 		"trpc-client-devtools-link": "0.2.1-next",
