--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -42,9 +42,11 @@
 		"@mantine/tiptap": "6.0.11",
 		"@mantine/utils": "6.0.11",
 		"@next/bundle-analyzer": "13.4.3",
+		"@opentelemetry/api": "1.4.1",
 		"@opentelemetry/exporter-trace-otlp-http": "0.39.1",
 		"@opentelemetry/instrumentation": "0.39.1",
 		"@opentelemetry/resources": "1.13.0",
+		"@opentelemetry/sdk-node": "0.39.1",
 		"@opentelemetry/sdk-trace-base": "1.13.0",
 		"@opentelemetry/sdk-trace-node": "1.13.0",
 		"@opentelemetry/semantic-conventions": "1.13.0",
