--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -3,7 +3,8 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"strict": true,
-		"plugins": [{ "name": "next" }]
+		"plugins": [{ "name": "next" }],
+		"allowImportingTsExtensions": true
 	},
 	"include": [
 		"./next-env.d.ts",
