--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -81,6 +81,7 @@
 		"i18next-multiload-backend-adapter": "2.2.0",
 		"ioredis": "5.3.2",
 		"just-compact": "3.2.0",
+		"just-compare": "2.3.0",
 		"luxon": "3.3.0",
 		"next": "13.4.3",
 		"next-auth": "4.22.1",
