update tsconfig paths, remove console.log, update env

--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -4,7 +4,14 @@
 		"baseUrl": ".",
 		"strict": true,
 		"plugins": [{ "name": "next" }],
-		"allowImportingTsExtensions": true
+		"allowImportingTsExtensions": true,
+		"paths": {
+			"~app/*": ["./src/*"],
+			"~api/*": ["../../packages/api/*"],
+			"~auth/*": ["../../packages/auth/*"],
+			"~db/*": ["../../packages/db/*"],
+			"~ui/*": ["../../packages/ui/*"]
+		}
 	},
 	"include": [
 		"./next-env.d.ts",
