--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -2,7 +2,15 @@
 	"extends": "@weareinreach/config/tsconfig/base.json",
 	"compilerOptions": {
 		"baseUrl": "./",
-		"strict": true
+		"strict": true,
+		"paths": {
+			"~api/*": ["../../packages/api/*"],
+			"~app/*": ["../../apps/app/src/*"],
+			"~auth/*": ["./*"],
+			"~db/*": ["../../packages/db/*"],
+			"~ui/*": ["../../packages/ui/*"],
+			"~web/*": ["../../apps/web/src/*"]
+		}
 	},
 	"exclude": ["**/node_modules", "**/.*/"],
 	"include": ["./**/*.ts", "../../@types/**/*.ts"]
