--- a/packages/db/.gitignore
+++ b/packages/db/.gitignore
@@ -2,6 +2,7 @@ node_modules
 # Keep environment variables out of version control
 !.env
 dist
+temp.ts
 
 data-transfer/output/**/*.json
 data-transfer/output-types/*.ts
