--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -91,6 +91,7 @@
 		"nextjs-routes": "1.0.9",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-error-boundary": "4.0.7",
 		"react-i18next": "12.3.1",
 		"zod": "3.21.4"
 	},
