--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -37,6 +37,7 @@
 		"localized-address-format": "1.3.1",
 		"nextjs-routes": "1.0.9",
 		"probe-image-size": "7.2.3",
+		"react-error-boundary": "4.0.7",
 		"react-phone-number-input": "3.2.23",
 		"react-string-replace": "1.1.0"
 	},
@@ -200,6 +201,7 @@
 		"next-i18next": "^13",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-error-boundary": "^4",
 		"react-i18next": "^12"
 	},
 	"msw": {
