--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,7 @@
 		"build:icons": "tsx ./icon/buildIcons.ts",
 		"chromatic": "chromatic",
 		"clean:node": "rm -rf ./node_modules/ || true",
-		"dev": "pnpm with-env storybook dev -p 6006 --no-open",
+		"dev": "storybook dev -p 6006 --no-open",
 		"dev:fast": "pnpm dev",
 		"format": "prettier --write --cache --cache-strategy metadata .",
 		"preinstall": "npx only-allow pnpm",
@@ -39,7 +39,8 @@
 		"probe-image-size": "7.2.3",
 		"react-error-boundary": "4.0.7",
 		"react-phone-number-input": "3.2.23",
-		"react-string-replace": "1.1.0"
+		"react-string-replace": "1.1.0",
+		"timezones-list": "3.0.2"
 	},
 	"devDependencies": {
 		"@babel/core": "7.22.1",
