--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -61,6 +61,7 @@
 		"@trpc/next": "10.28.1",
 		"@trpc/react-query": "10.28.1",
 		"@trpc/server": "10.28.1",
+		"@vercel/kv": "0.2.1",
 		"@weareinreach/api": "0.100.0",
 		"@weareinreach/auth": "0.100.0",
 		"@weareinreach/db": "0.100.0",
