--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -46,6 +46,8 @@
 		"@opentelemetry/api": "1.4.1",
 		"@opentelemetry/exporter-trace-otlp-http": "0.39.1",
 		"@opentelemetry/instrumentation": "0.39.1",
+		"@opentelemetry/instrumentation-fetch": "0.39.1",
+		"@opentelemetry/instrumentation-http": "0.39.1",
 		"@opentelemetry/resources": "1.13.0",
 		"@opentelemetry/sdk-node": "0.39.1",
 		"@opentelemetry/sdk-trace-base": "1.13.0",
@@ -91,6 +93,8 @@
 		"next-i18next": "13.2.2",
 		"next-seo": "6.0.0",
 		"nextjs-routes": "1.0.9",
+		"object-sizeof": "2.6.1",
+		"pretty-bytes": "6.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-error-boundary": "4.0.8",
