--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -71,6 +71,7 @@
 		"@weareinreach/i18next-keys-ondemand": "0.3.2",
 		"@weareinreach/ui": "0.100.0",
 		"axios": "1.4.0",
+		"cookies-next": "2.1.1",
 		"dayjs": "1.11.8",
 		"deepmerge": "4.3.1",
 		"duration-fns": "3.0.2",
