--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,6 +27,7 @@
 		"@turf/helpers": "6.5.0",
 		"ajv": "8.12.0",
 		"alex": "11.0.0",
+		"cookies-next": "2.1.1",
 		"geolib": "3.3.4",
 		"json-schema-to-zod": "0.6.3",
 		"just-compact": "3.2.0",
