--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -139,6 +139,7 @@
 		"next-router-mock": "0.9.6",
 		"postcss-loader": "7.3.3",
 		"prettier": "2.8.8",
+		"pretty-bytes": "6.1.0",
 		"react": "18.2.0",
 		"react-docgen-typescript": "2.2.2",
 		"react-dom": "18.2.0",
