--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -54,6 +54,7 @@
 		"@opentelemetry/sdk-trace-node": "1.14.0",
 		"@opentelemetry/semantic-conventions": "1.14.0",
 		"@prisma/instrumentation": "4.15.0",
+		"@sentry/nextjs": "7.55.2",
 		"@tanstack/react-query": "4.29.13",
 		"@tanstack/react-table": "8.9.2",
 		"@tiptap/extension-link": "2.0.3",
