--- a/.gitignore
+++ b/.gitignore
@@ -36,10 +36,8 @@ yarn-error.log*
 
 # local env files
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
 .env
+.env*.local
 
 # turbo
 .turbo
@@ -65,3 +63,4 @@ _generated/*
 .serverless
 
 packages/db/backup
+
