--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -17,6 +17,7 @@
 		"@next-auth/prisma-adapter": "1.0.7",
 		"aws-jwt-verify": "4.0.0",
 		"tiny-invariant": "1.3.1",
+		"tslog": "4.8.2",
 		"zod": "3.21.4"
 	},
 	"devDependencies": {
