use workspace protocol

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -66,11 +66,11 @@
 		"@trpc/server": "10.30.0",
 		"@vercel/analytics": "1.0.1",
 		"@vercel/kv": "0.2.1",
-		"@weareinreach/api": "0.100.0",
-		"@weareinreach/auth": "0.100.0",
-		"@weareinreach/db": "0.100.0",
+		"@weareinreach/api": "workspace:*",
+		"@weareinreach/auth": "workspace:*",
+		"@weareinreach/db": "workspace:*",
 		"@weareinreach/i18next-keys-ondemand": "0.3.2",
-		"@weareinreach/ui": "0.100.0",
+		"@weareinreach/ui": "workspace:*",
 		"axios": "1.4.0",
 		"cookies-next": "2.1.2",
 		"dayjs": "1.11.8",
@@ -120,7 +120,7 @@
 		"@types/umami": "0.1.1",
 		"@typescript-eslint/eslint-plugin": "5.59.11",
 		"@typescript-eslint/parser": "5.59.11",
-		"@weareinreach/config": "0.100.0",
+		"@weareinreach/config": "workspace:*",
 		"@weareinreach/eslint-config": "0.100.0",
 		"commander": "10.0.1",
 		"dotenv": "16.1.4",
