--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,8 +23,8 @@
 		"@trpc/next": "10.30.0",
 		"@trpc/react-query": "10.30.0",
 		"@trpc/server": "10.30.0",
-		"@weareinreach/auth": "0.100.0",
-		"@weareinreach/db": "0.100.0",
+		"@weareinreach/auth": "workspace:*",
+		"@weareinreach/db": "workspace:*",
 		"alex": "11.0.0",
 		"geo-tz": "7.0.7",
 		"geolib": "3.3.4",
@@ -52,7 +52,7 @@
 		"@types/node": "18.16.18",
 		"@types/prettier": "2.7.3",
 		"@types/terraformer__wkt": "2.0.0",
-		"@weareinreach/config": "0.100.0",
+		"@weareinreach/config": "workspace:*",
 		"@weareinreach/eslint-config": "0.100.0",
 		"dotenv-cli": "7.2.1",
 		"eslint": "8.42.0",
