--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -25,8 +25,8 @@
 		"@types/node": "18.16.18",
 		"@types/react": "18.2.12",
 		"@types/react-dom": "18.2.5",
-		"@weareinreach/config": "0.100.0",
-		"@weareinreach/db": "0.100.0",
+		"@weareinreach/config": "workspace:*",
+		"@weareinreach/db": "workspace:*",
 		"@weareinreach/eslint-config": "0.100.0",
 		"eslint": "8.42.0",
 		"next": "13.4.5",
