--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"@types/lint-staged": "13.2.0",
 		"@types/node": "18.16.18",
 		"@types/prettier": "2.7.3",
-		"@weareinreach/config": "0.100.0",
+		"@weareinreach/config": "workspace:*",
 		"@weareinreach/eslint-config": "0.100.0",
 		"boxen": "7.1.0",
 		"dotenv": "16.1.4",
