--- a/packages/aws-user-migrate/package.json
+++ b/packages/aws-user-migrate/package.json
@@ -23,7 +23,7 @@
 	"dependencies": {
 		"@aws-lambda-powertools/logger": "1.9.0",
 		"@prisma/client": "4.15.0",
-		"@weareinreach/db": "0.100.0"
+		"@weareinreach/db": "workspace:*"
 	},
 	"devDependencies": {
 		"@types/aws-lambda": "8.10.118",
@@ -31,7 +31,7 @@
 		"@types/node": "18.16.18",
 		"@types/prettier": "2.7.3",
 		"@vercel/ncc": "0.36.1",
-		"@weareinreach/config": "0.100.0",
+		"@weareinreach/config": "workspace:*",
 		"@weareinreach/eslint-config": "0.100.0",
 		"aws-lambda": "1.0.7",
 		"eslint": "8.42.0",
