--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -78,7 +78,7 @@
 		"@types/prettier": "2.7.3",
 		"@types/recursive-readdir": "2.2.1",
 		"@types/terraformer__wkt": "2.0.0",
-		"@weareinreach/config": "0.100.0",
+		"@weareinreach/config": "workspace:*",
 		"@weareinreach/eslint-config": "0.100.0",
 		"@zerodep/geo.stateiso": "0.1.4",
 		"axios": "1.4.0",
