--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -112,10 +112,10 @@
 		"@types/react": "18.2.12",
 		"@types/react-dom": "18.2.5",
 		"@types/terraformer__wkt": "2.0.0",
-		"@weareinreach/api": "0.100.0",
-		"@weareinreach/auth": "0.100.0",
-		"@weareinreach/config": "0.100.0",
-		"@weareinreach/db": "0.100.0",
+		"@weareinreach/api": "workspace:*",
+		"@weareinreach/auth": "workspace:*",
+		"@weareinreach/config": "workspace:*",
+		"@weareinreach/db": "workspace:*",
 		"@weareinreach/eslint-config": "0.100.0",
 		"babel-loader": "9.1.2",
 		"chromatic": "6.19.5",
