--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -15,6 +15,8 @@
 	"dependencies": {
 		"@aws-sdk/client-cognito-identity-provider": "3.352.0",
 		"@next-auth/prisma-adapter": "1.0.7",
+		"@weareinreach/db": "workspace:*",
+		"@weareinreach/env": "workspace:*",
 		"aws-jwt-verify": "4.0.0",
 		"tiny-invariant": "1.3.1",
 		"tslog": "4.8.2",
@@ -26,7 +28,6 @@
 		"@types/react": "18.2.12",
 		"@types/react-dom": "18.2.5",
 		"@weareinreach/config": "workspace:*",
-		"@weareinreach/db": "workspace:*",
 		"@weareinreach/eslint-config": "0.100.0",
 		"eslint": "8.42.0",
 		"next": "13.4.5",
