--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -7,17 +7,12 @@
 		"lint-staged/index.js",
 		"lint-staged/next.js",
 		"prettier/index.js",
-		"i18next/index.js",
-		"env/index.ts"
+		"i18next/index.js"
 	],
 	"scripts": {
 		"clean:node": "rm -rf ./node_modules/ || true",
 		"format": "prettier --cache --cache-strategy metadata --write --ignore-unknown .",
 		"preinstall": "npx only-allow pnpm"
-	},
-	"dependencies": {
-		"@t3-oss/env-nextjs": "0.4.0",
-		"zod": "3.21.4"
 	},
 	"devDependencies": {
 		"@types/node": "18.16.18",
