--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -51,6 +51,7 @@
 		"@prisma/instrumentation": "4.15.0",
 		"@vercel/kv": "0.2.1",
 		"@vercel/postgres-kysely": "0.3.1",
+		"@weareinreach/env": "workspace:*",
 		"kysely": "0.25.0",
 		"prisma-kysely": "1.4.2",
 		"superjson": "1.12.3",
