--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,6 +25,7 @@
 		"@terraformer/wkt": "2.2.0",
 		"@textea/json-viewer": "3.0.0",
 		"@turf/helpers": "6.5.0",
+		"@weareinreach/env": "workspace:*",
 		"ajv": "8.12.0",
 		"alex": "11.0.0",
 		"cookies-next": "2.1.2",
