--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -5,9 +5,7 @@
 	"files": [
 		"./index.ts"
 	],
-	"scripts": {
-		"build": "turbo build"
-	},
+	"scripts": {},
 	"dependencies": {
 		"@t3-oss/env-nextjs": "0.4.0",
 		"zod": "3.21.4"
