--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -10,7 +10,8 @@
 		"format": "prettier --write --cache --cache-strategy metadata .",
 		"lint": "eslint --cache .",
 		"lint:fix": "eslint --cache --fix .",
-		"type-check": "tsc --noEmit"
+		"type-check": "tsc --noEmit",
+		"with-env": "dotenv -e ../../.env --"
 	},
 	"dependencies": {
 		"@aws-sdk/client-cognito-identity-provider": "3.352.0",
