--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -76,6 +76,7 @@
 		"@types/langs": "2.0.1",
 		"@types/luxon": "3.3.0",
 		"@types/node": "18.16.18",
+		"@types/papaparse": "5.3.7",
 		"@types/prettier": "2.7.3",
 		"@types/recursive-readdir": "2.2.1",
 		"@types/terraformer__wkt": "2.0.0",
@@ -101,6 +102,7 @@
 		"listr2": "6.6.0",
 		"luxon": "3.3.0",
 		"mongoback": "3.0.6",
+		"papaparse": "5.4.1",
 		"prettier": "2.8.8",
 		"pretty-bytes": "6.1.0",
 		"prisma": "4.15.0",
