--- a/packages/ui/turbo.json
+++ b/packages/ui/turbo.json
@@ -7,7 +7,8 @@
 			"outputs": ["storybook-static/**", "./icon/iconList.ts"]
 		},
 		"build:icons": {
-			"inputs": ["./icon/iconList.ts"]
+			"inputs": ["./icon/iconList.ts", "./icon/iconCollection.ts"],
+			"outputs": ["./icon/iconList.ts", "./icon/index.tsx"]
 		},
 		"chromatic": {
 			"dependsOn": ["build"],
