--- a/packages/db/turbo.json
+++ b/packages/db/turbo.json
@@ -5,25 +5,25 @@
 		"db:dataMigrate": {
 			"dependsOn": ["download:seedData", "db:generate", "db:deploy"],
 			"env": ["DATABASE_URL", "DB_DIRECT_URL"],
-			"inputs": ["prisma/data-migrations/**/*.ts", "prisma/dataMigrationRunner.ts"]
+			"inputs": ["./prisma/data-migrations/**/*.ts", "./prisma/dataMigrationRunner.ts"]
 		},
 		"db:deploy": {
 			"dependsOn": ["db:generate"],
 			"env": ["DATABASE_URL", "DB_DIRECT_URL"],
-			"inputs": ["prisma/migrations/**/*"]
+			"inputs": ["./prisma/migrations/**/*"]
 		},
 		"db:generate": {
 			"cache": false,
 			"env": ["DATABASE_URL", "DB_DIRECT_URL", "PRISMA_GENERATE_DATAPROXY"],
-			"inputs": ["prisma/schema.prisma"]
+			"inputs": ["./prisma/schema.prisma"]
 		},
 		"db:run-seed": {
 			"cache": false,
 			"dependsOn": ["download:seedData"]
 		},
 		"download:seedData": {
-			"inputs": ["seed/starterData.ts", "seed/downloadData.ts"],
-			"outputs": ["seed/data/downloaded/*.json"]
+			"inputs": ["./seed/starterData.ts", "./seed/downloadData.ts"],
+			"outputs": ["./seed/data/downloaded/*.json"]
 		},
 		"generate:data": {
 			"cache": false,
