update pipeline caching

--- a/packages/ui/turbo.json
+++ b/packages/ui/turbo.json
@@ -4,7 +4,8 @@
 	"pipeline": {
 		"build": {
 			"dependsOn": ["^build"],
-			"outputs": ["storybook-static/**", "./icon/iconList.ts"]
+			"inputs": ["./icon/iconList.ts", "./icon/iconCollection.ts"],
+			"outputs": ["./icon/iconList.ts"]
 		},
 		"build:icons": {
 			"inputs": ["./icon/iconList.ts", "./icon/iconCollection.ts"],
