update turborepo output

--- a/packages/db/turbo.json
+++ b/packages/db/turbo.json
@@ -5,7 +5,8 @@
 		"db:dataMigrate": {
 			"dependsOn": ["download:seedData", "db:generate", "db:deploy"],
 			"env": ["DATABASE_URL", "DB_DIRECT_URL"],
-			"inputs": ["./prisma/data-migrations/**/*.ts", "./prisma/dataMigrationRunner.ts"]
+			"inputs": ["./prisma/data-migrations/**/*.ts", "./prisma/dataMigrationRunner.ts"],
+			"outputMode": "new-only"
 		},
 		"db:deploy": {
 			"dependsOn": ["db:generate"],
@@ -23,6 +24,7 @@
 		},
 		"download:seedData": {
 			"inputs": ["./seed/starterData.ts", "./seed/downloadData.ts"],
+			"outputMode": "new-only",
 			"outputs": ["./seed/data/downloaded/*.json"]
 		},
 		"generate:data": {
