--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"license": "GPL-3.0-only",
 	"author": "",
-	"main": "index.ts",
+	"main": "./index.ts",
+	"types": "./index.ts",
 	"scripts": {
 		"clean:node": "rm -rf ./node_modules/ || true",
 		"format": "prettier --write --cache --cache-strategy metadata .",
