--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -2,6 +2,8 @@
 	"name": "@weareinreach/env",
 	"version": "0.0.0",
 	"private": true,
+	"main": "./index.ts",
+	"types": "./index.ts",
 	"files": [
 		"./index.ts"
 	],
