--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -185,9 +185,9 @@
 		"@mantine/utils": "^6",
 		"@tanstack/react-query": "^4",
 		"@tanstack/react-table": "^8",
-		"@tiptap/extension-link": "^2.0.0-beta.209",
-		"@tiptap/react": "^2.0.0-beta.209",
-		"@tiptap/starter-kit": "^2.0.0-beta.209",
+		"@tiptap/extension-link": "^2.0.0",
+		"@tiptap/react": "^2.0.0",
+		"@tiptap/starter-kit": "^2.0.0",
 		"@trpc/client": "10.31.0",
 		"@trpc/next": "10.31.0",
 		"@trpc/react-query": "10.31.0",
