--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -34,6 +34,7 @@
 		"eslint-plugin-storybook": "0.6.12",
 		"eslint-plugin-turbo": "1.10.3",
 		"next": "13.4.6",
+		"resolve-pkg-maps": "1.0.0",
 		"typescript": "5.1.3"
 	},
 	"peerDependencies": {
