data migration: update sourceId

--- a/packages/db/.gitignore
+++ b/packages/db/.gitignore
@@ -18,6 +18,7 @@ seed/migrate-v1/_generated/*
 seed/data/downloaded/*
 !seed/data/downloaded/.gitkeep
 seed/migrate-edits/*.json
+seed/recon/generated/*.json
 
 prisma/generated
 prisma/dbml
