--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -17,6 +17,7 @@ jobs:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DB_DIRECT_URL: ${{ secrets.DB_DIRECT_URL }}
       CI: true
       OVERRIDE_CI: true
       FORCE_COLOR: true
