--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -2,6 +2,7 @@
 	"$schema": "https://openapi.vercel.sh/vercel.json",
 	"git": {
 		"deploymentEnabled": {
+			"*": false,
 			"l10n_*": false,
 			"renovate/github_actions": false
 		}
