data generators & corrections

--- a/packages/db/.gitignore
+++ b/packages/db/.gitignore
@@ -19,6 +19,9 @@ seed/data/downloaded/*
 !seed/data/downloaded/.gitkeep
 seed/migrate-edits/*.json
 seed/recon/generated/*.json
+seed/recon/corrections/*.json
+seed/recon/output/**/*.json
+seed/recon/input/**/*.json
 
 prisma/generated
 prisma/dbml
