--- a/packages/db/.prettierignore
+++ b/packages/db/.prettierignore
@@ -20,3 +20,6 @@ pnpm-lock.yaml
 .DS_Store
 .eslintignore
 prisma/data-migrations/**/*.json
+seed/recon/corrections/*.json
+seed/recon/output/**/*.json
+seed/recon/input/**/*.json
