--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -114,6 +114,7 @@
 		"recursive-readdir": "2.2.3",
 		"shoetest": "1.2.2",
 		"slugify": "1.6.6",
+		"sql-bricks-postgres": "0.6.0",
 		"tiny-invariant": "1.3.1",
 		"tsx": "3.12.7",
 		"type-fest": "3.12.0",
