--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
 	"version": "0.100.0",
 	"private": true,
 	"scripts": {
-		"build": "next build",
+		"buildx": "next build",
 		"clean:node": "rm -rf ./node_modules/ || true && rm -rf ./.next || true",
 		"dev": "next dev",
 		"preinstall": "npx only-allow pnpm",
