--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -55,6 +55,7 @@
 		"@weareinreach/env": "workspace:*",
 		"kysely": "0.25.0",
 		"prisma-kysely": "1.4.2",
+		"sql-bricks": "3.0.0",
 		"superjson": "1.12.4",
 		"tslog": "4.8.2",
 		"ulid": "2.3.0",
@@ -114,6 +115,7 @@
 		"recursive-readdir": "2.2.3",
 		"shoetest": "1.2.2",
 		"slugify": "1.6.6",
+		"sql-bricks-postgres": "0.6.0",
 		"tiny-invariant": "1.3.1",
 		"tsx": "3.12.7",
 		"type-fest": "3.12.0",
