--- a/packages/db/.gitignore
+++ b/packages/db/.gitignore
@@ -19,7 +19,7 @@ seed/data/downloaded/*
 !seed/data/downloaded/.gitkeep
 seed/migrate-edits/*.json
 seed/recon/generated/*.json
-seed/recon/corrections/*.json
+# seed/recon/corrections/*.json
 seed/recon/output/**/*.json
 seed/recon/input/**/*.json
 
