--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -54,7 +54,12 @@
 		"@vercel/kv": "0.2.2",
 		"@vercel/postgres-kysely": "0.4.0",
 		"@weareinreach/env": "workspace:*",
+		"json-difference": "1.9.1",
+		"just-compare": "2.3.0",
+		"just-diff": "6.0.2",
+		"just-diff-apply": "5.5.0",
 		"just-filter-object": "3.2.0",
+		"just-map-values": "3.2.0",
 		"just-pick": "4.2.0",
 		"kysely": "0.25.0",
 		"prisma-kysely": "1.5.0",
