--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -60,7 +60,11 @@
 		"just-diff-apply": "5.5.0",
 		"just-filter-object": "3.2.0",
 		"just-map-values": "3.2.0",
+		"just-omit": "2.2.0",
 		"just-pick": "4.2.0",
+		"just-safe-get": "4.2.0",
+		"just-safe-set": "4.2.1",
+		"just-sort-by": "3.2.0",
 		"kysely": "0.25.0",
 		"prisma-kysely": "1.5.0",
 		"sql-bricks": "3.0.0",
