--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -56,6 +56,7 @@
 		"@weareinreach/env": "workspace:*",
 		"json-difference": "1.9.1",
 		"just-compare": "2.3.0",
+		"just-deep-map-values": "1.2.0",
 		"just-diff": "6.0.2",
 		"just-diff-apply": "5.5.0",
 		"just-filter-object": "3.2.0",
