--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -60,6 +60,7 @@
 		"just-diff": "6.0.2",
 		"just-diff-apply": "5.5.0",
 		"just-filter-object": "3.2.0",
+		"just-map-keys": "2.3.0",
 		"just-map-values": "3.2.0",
 		"just-omit": "2.2.0",
 		"just-pick": "4.2.0",
