--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -16,6 +16,7 @@
 		"db:deploy": "pnpm with-env prisma migrate deploy",
 		"db:generate": "pnpm clean:zod && pnpm with-env prisma generate && prisma -v",
 		"db:generate:aws": "pnpm install && pnpm with-env prisma generate",
+		"db:generate:kysely": "pnpm with-env kysely-codegen || true",
 		"db:generate:proxy": "pnpm clean:zod && pnpm with-env prisma generate --data-proxy && prisma -v",
 		"db:migrate": "pnpm with-env prisma migrate dev",
 		"db:migrate:edit": "pnpm with-env prisma migrate dev --create-only --skip-seed",
@@ -68,6 +69,7 @@
 		"just-safe-set": "4.2.1",
 		"just-sort-by": "3.2.0",
 		"kysely": "0.26.1",
+		"pg": "8.11.1",
 		"prisma-kysely": "1.5.0",
 		"sql-bricks": "3.0.0",
 		"superjson": "1.13.1",
@@ -93,6 +95,7 @@
 		"@types/luxon": "3.3.0",
 		"@types/node": "18.16.19",
 		"@types/papaparse": "5.3.7",
+		"@types/pg": "8.10.2",
 		"@types/prettier": "2.7.3",
 		"@types/recursive-readdir": "2.2.1",
 		"@types/terraformer__wkt": "2.0.0",
@@ -113,6 +116,7 @@
 		"just-capitalize": "3.2.0",
 		"just-compact": "3.2.0",
 		"just-flush": "2.3.0",
+		"kysely-codegen": "0.10.1",
 		"langs": "2.0.0",
 		"libphonenumber-js": "1.10.37",
 		"listr2": "6.6.0",
