--- a/turbo.json
+++ b/turbo.json
@@ -44,6 +44,7 @@
 		"db:dataMigrate": {},
 		"db:deploy": {},
 		"db:generate": {},
+		"db:generate:kysely": {},
 		"deploy:aws": {},
 		"dev": {
 			"cache": false,
