--- a/apps/app/turbo.json
+++ b/apps/app/turbo.json
@@ -3,7 +3,14 @@
 	"extends": ["//"],
 	"pipeline": {
 		"build": {
-			"dependsOn": ["^build", "^db:generate", "^generate:data", "^db:deploy", "^db:dataMigrate"],
+			"dependsOn": [
+				"build:prebuild",
+				"^build",
+				"^db:generate",
+				"^generate:data",
+				"^db:deploy",
+				"^db:dataMigrate"
+			],
 			"env": [
 				"DATABASE_URL",
 				"DB_DIRECT_URL",
