--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -5,7 +5,7 @@
 	"license": "GPL-3.0-only",
 	"scripts": {
 		"build": "next build",
-		"build:prebuild": "pnpm with-env tsx ./lib/prebuild.ts",
+		"build:prebuild": "SKIP_ENV_VALIDATION=true tsx ./lib/prebuild.ts",
 		"clean:node": "rm -rf ./node_modules/ || true && rm -rf ./.next || true",
 		"dev": "next dev",
 		"dev:verbose": "NEXT_VERBOSE=1 next dev",
