ignore renovate branches

--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -11,10 +11,14 @@ on:
       # - dev
       - main
       - l10n_**
+      - renovate/*
 
 jobs:
   synchronize-with-crowdin:
     runs-on: ubuntu-latest
+    # permissions:
+    #   contents: write
+    #   pull-requests: write
 
     steps:
       - name: Checkout
