--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -90,6 +90,7 @@
 		"@types/flat": "5.0.2",
 		"@types/geojson": "7946.0.10",
 		"@types/inquirer": "9.0.3",
+		"@types/inquirer-autocomplete-prompt": "3.0.0",
 		"@types/iso-3166-2": "1.0.0",
 		"@types/langs": "2.0.1",
 		"@types/luxon": "3.3.1",
@@ -111,6 +112,7 @@
 		"flat": "5.0.2",
 		"geojson": "0.5.0",
 		"inquirer": "9.2.9",
+		"inquirer-autocomplete-prompt": "3.0.0",
 		"iso-3166-2": "1.0.0",
 		"iso-google-locales": "3.0.4",
 		"just-capitalize": "3.2.0",
