--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -10,7 +10,8 @@
 			"~api/*": ["../../packages/api/*"],
 			"~auth/*": ["../../packages/auth/*"],
 			"~db/*": ["../../packages/db/*"],
-			"~ui/*": ["../../packages/ui/*"]
+			"~ui/*": ["../../packages/ui/*"],
+			"~util/*": ["../../packages/util/*"]
 		}
 	},
 	"include": [
