--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,6 +19,7 @@
 		"@crowdin/ota-client": "1.0.0",
 		"@googlemaps/google-maps-services-js": "3.3.35",
 		"@opentelemetry/api": "1.4.1",
+		"@sentry/node": "7.61.0",
 		"@tanstack/react-query": "4.32.1",
 		"@terraformer/wkt": "2.2.0",
 		"@trpc/client": "10.36.0",
@@ -30,6 +31,7 @@
 		"@weareinreach/auth": "workspace:*",
 		"@weareinreach/db": "workspace:*",
 		"@weareinreach/env": "workspace:*",
+		"@weareinreach/util": "workspace:*",
 		"alex": "11.0.0",
 		"geo-tz": "7.0.7",
 		"geolib": "3.3.4",
