--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -18,6 +18,7 @@
 		"@next-auth/prisma-adapter": "1.0.7",
 		"@weareinreach/db": "workspace:*",
 		"@weareinreach/env": "workspace:*",
+		"@weareinreach/util": "workspace:*",
 		"aws-jwt-verify": "4.0.0",
 		"tiny-invariant": "1.3.1",
 		"tslog": "4.8.2",
