--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -10,6 +10,7 @@
 	"scripts": {},
 	"dependencies": {
 		"@t3-oss/env-nextjs": "0.6.0",
+		"@weareinreach/util": "workspace:*",
 		"chromatic": "6.20.0",
 		"zod": "3.21.4"
 	},
