--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,6 +26,7 @@
 		"@textea/json-viewer": "3.1.1",
 		"@turf/helpers": "6.5.0",
 		"@weareinreach/env": "workspace:*",
+		"@weareinreach/util": "workspace:*",
 		"ajv": "8.12.0",
 		"alex": "11.0.0",
 		"cookies-next": "2.1.2",
