--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -57,6 +57,7 @@
 		"@opentelemetry/semantic-conventions": "1.15.1",
 		"@prisma/instrumentation": "5.1.0",
 		"@sentry/nextjs": "7.61.0",
+		"@sentry/opentelemetry-node": "7.61.0",
 		"@tanstack/react-query": "4.32.1",
 		"@tanstack/react-table": "8.9.3",
 		"@tiptap/extension-link": "2.0.4",
