--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -76,6 +76,7 @@
 		"@mantine/utils": "6.0.17",
 		"@storybook/addon-a11y": "7.2.0",
 		"@storybook/addon-actions": "7.2.0",
+		"@storybook/addon-designs": "7.0.1",
 		"@storybook/addon-docs": "7.2.0",
 		"@storybook/addon-essentials": "7.2.0",
 		"@storybook/addon-interactions": "7.2.0",
@@ -121,7 +122,6 @@
 		"@weareinreach/eslint-config": "0.100.0",
 		"babel-loader": "9.1.3",
 		"chromatic": "6.20.0",
-		"css-chaos-addon": "0.0.5",
 		"css-loader": "6.8.1",
 		"dayjs": "1.11.9",
 		"dotenv": "16.3.1",
@@ -149,7 +149,6 @@
 		"resolve-url-loader": "5.0.0",
 		"slugify": "1.6.6",
 		"storybook": "7.2.0",
-		"storybook-addon-designs": "7.0.0-beta.2",
 		"storybook-addon-pseudo-states": "2.1.0",
 		"storybook-addon-swc": "1.2.0",
 		"storybook-addon-turbo-build": "2.0.1",
