--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,7 +21,7 @@
 		"with-env": "dotenv -e ../../.env --"
 	},
 	"dependencies": {
-		"@react-google-maps/api": "2.19.2",
+		"@googlemaps/react-wrapper": "1.1.35",
 		"@terraformer/wkt": "2.2.0",
 		"@textea/json-viewer": "3.1.1",
 		"@turf/helpers": "6.5.0",
