--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,6 +25,7 @@
 		"@terraformer/wkt": "2.2.0",
 		"@textea/json-viewer": "3.1.1",
 		"@turf/helpers": "6.5.0",
+		"@tweenjs/tween.js": "21.0.0",
 		"@weareinreach/env": "workspace:*",
 		"@weareinreach/util": "workspace:*",
 		"ajv": "8.12.0",
@@ -121,6 +122,7 @@
 		"@weareinreach/config": "workspace:*",
 		"@weareinreach/db": "workspace:*",
 		"@weareinreach/eslint-config": "0.100.0",
+		"@welldone-software/why-did-you-render": "7.0.1",
 		"babel-loader": "9.1.3",
 		"chromatic": "6.21.0",
 		"css-loader": "6.8.1",
@@ -146,6 +148,7 @@
 		"react": "18.2.0",
 		"react-docgen-typescript": "2.2.2",
 		"react-dom": "18.2.0",
+		"react-hook-tracer": "1.4.0",
 		"react-i18next": "13.0.3",
 		"resolve-url-loader": "5.0.0",
 		"slugify": "1.6.6",
