--- a/package.json
+++ b/package.json
@@ -72,22 +72,21 @@
 			"chokidar": ">=3.0.0",
 			"csstype": "^3.1.2",
 			"eslint-plugin-import": "npm:eslint-plugin-i@latest",
-			"eslint-plugin-turbo@0.0.9": "0.0.8",
-			"glob-parent@<5.1.2": ">=5.1.2",
+			"glob-parent@<5.1.2": "^5.1.2",
 			"http-cache-semantics@<=4.1.0": "^4.1.1",
-			"listr2@<5": ">=5.0.5",
+			"listr2@<5": "^5.0.5",
 			"micromatch": ">=4.0.0",
 			"msw@1.2.2": "1.2.1",
-			"node-fetch@<2.6.7": ">=2.6.7",
+			"node-fetch@<2.6.7": "^2.6.7",
 			"package-json@<7": "^7.0.0",
 			"react-dom@<18": "^18",
 			"react@<18": "^18",
 			"sane": ">=5.0.0",
 			"sourcemap-codec": "npm:@jridgewell/sourcemap-codec@^1.4.14",
-			"trim-newlines@<3.0.1": ">=3.0.1",
-			"trim@<0.0.3": ">=0.0.3",
+			"trim-newlines@<3.0.1": "^3.0.1",
+			"trim@<0.0.3": "^0.0.3",
 			"tsconfig-paths": ">=4.0.0",
-			"undici@<=5.8.1": ">=5.8.2",
+			"undici@<=5.8.1": "^5.8.2",
 			"uuid": ">=9.0.0"
 		},
 		"patchedDependencies": {
