--- a/package.json
+++ b/package.json
@@ -93,7 +93,8 @@
 			"@crowdin/ota-client@1.0.0": "patches/@crowdin__ota-client@1.0.0.patch",
 			"eslint-plugin-node@11.1.0": "patches/eslint-plugin-node@11.1.0.patch",
 			"iso-google-locales@3.0.4": "patches/iso-google-locales@3.0.4.patch",
-			"trpc-panel@1.3.4": "patches/trpc-panel@1.3.4.patch"
+			"trpc-panel@1.3.4": "patches/trpc-panel@1.3.4.patch",
+			"next-auth@4.23.0": "patches/next-auth@4.23.0.patch"
 		},
 		"peerDependencyRules": {
 			"allowedVersions": {
