set up initial route, component, add deps

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -136,6 +136,7 @@
 		"i18next-http-backend": "2.2.1",
 		"i18next-intervalplural-postprocessor": "3.0.0",
 		"luxon": "3.4.0",
+		"mantine-react-table": "1.1.1",
 		"merge-anything": "5.1.7",
 		"msw": "1.2.3",
 		"msw-storybook-addon": "1.8.0",
@@ -204,6 +205,7 @@
 		"i18next-http-backend": "^2",
 		"i18next-intervalplural-postprocessor": "^3",
 		"luxon": "^3",
+		"mantine-react-table": "^1",
 		"next": "^13",
 		"next-auth": "^4",
 		"next-i18next": "^14.0.0",
