--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -39,6 +39,7 @@
 		"just-filter-object": "3.2.0",
 		"just-map-values": "3.2.0",
 		"libphonenumber-js": "1.10.41",
+		"locale-includes": "1.0.5",
 		"localized-address-format": "1.3.1",
 		"nextjs-routes": "2.0.1",
 		"probe-image-size": "7.2.3",
