--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 			"chokidar": ">=3.0.0",
 			"csstype": "^3.1.2",
 			"eslint-plugin-import": "npm:eslint-plugin-i@latest",
+			"eslint-plugin-node": "npm:eslint-plugin-n@latest",
 			"glob-parent@<5.1.2": "^5.1.2",
 			"http-cache-semantics@<=4.1.0": "^4.1.1",
 			"listr2@<5": "^5.0.5",
@@ -91,7 +92,6 @@
 		},
 		"patchedDependencies": {
 			"@crowdin/ota-client@1.0.0": "patches/@crowdin__ota-client@1.0.0.patch",
-			"eslint-plugin-node@11.1.0": "patches/eslint-plugin-node@11.1.0.patch",
 			"iso-google-locales@3.0.4": "patches/iso-google-locales@3.0.4.patch",
 			"trpc-panel@1.3.4": "patches/trpc-panel@1.3.4.patch"
 		},
