--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,18 +30,19 @@ jobs:
           git_config_global: true
           git_commit_gpgsign: true
 
+      - uses: pnpm/action-setup@d882d12c64e032187b2edb46d3a0d003b7a43598 # v2.4.0
+        name: Install pnpm
+        id: pnpm-install
+        with:
+          run_install: false
+          # standalone: true
+
       - name: Install Node.js
         uses: actions/setup-node@5e21ff4d9bc1a8cf6de233a3057d20ec6b3fb69d # v3
         with:
           node-version-file: .nvmrc
           cache: pnpm
           cache-dependency-path: pnpm-lock.yaml
-
-      - uses: pnpm/action-setup@d882d12c64e032187b2edb46d3a0d003b7a43598 # v2.4.0
-        name: Install pnpm
-        id: pnpm-install
-        with:
-          run_install: true
 
       # - name: Get pnpm store directory
       #   id: pnpm-cache
@@ -57,8 +58,8 @@ jobs:
       #     restore-keys: |
       #       ${{ runner.os }}-pnpm-store-
 
-      # - name: Install dependencies
-      #   run: pnpm install
+      - name: Install dependencies
+        run: pnpm install
 
       # Linting & Formatting
       - name: Lint workspace
